# media-organizer-cpp

./: CMakeCache.txt  CMakeLists.txt  compile_commands.json  generate_compile_commands.sh
src/: log.cpp  main.cpp
